# drone-lstm-fusion

./: .gitignore  README.md
bags/flight_20260623_091408/: flight_20260623_091408_0.mcap  metadata.yaml
docker/desktop/: Dockerfile
docs/: install_notes.md  launch_manual.md
ros2_ws/src/depth_anything_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/depth_anything_ros2/depth_anything_ros2/: depth_node.py
ros2_ws/src/drone_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/drone_bringup/config/: gazebo_mono.yaml
ros2_ws/src/drone_bringup/launch/: drone.launch.py  gazebo_mono_driver.py
ros2_ws/src/drone_mission/: CMakeLists.txt  package.xml
ros2_ws/src/drone_mission/drone_mission/: drone_controller.py  mission.py
ros2_ws/src/global_fusion/: CMakeLists.txt  package.xml
ros2_ws/src/global_fusion/include/global_fusion/: ekf.hpp
ros2_ws/src/global_fusion/src/: ekf.cpp  global_fusion_node.cpp
ros2_ws/src/ground_truth_plugin/: CMakeLists.txt  package.xml
ros2_ws/src/ground_truth_plugin/src/: GroundTruthPlugin.cc  GroundTruthPlugin.hh
ros2_ws/src/lstm_data_collector/: CMakeLists.txt  package.xml
ros2_ws/src/lstm_data_collector/lstm_data_collector/: collector_node.py
ros2_ws/src/lstm_noise_estimator/: CMakeLists.txt  package.xml
ros2_ws/src/lstm_noise_estimator/lstm_noise_estimator/: depth_noise_node.py  gps_noise_node.py  model.py  vio_noise_node.py
scripts/: check_drift.py  measure_vio_scale.py  record_flight.sh  start_sim.sh  start_sim_headless.sh  vio_to_px4.py
training/: sample_dataset.csv  train_lstm.py
training/models/: scaler_depth.pkl  scaler_gps.pkl  scaler_vio.pkl
