<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_fusion</name>
  <version>0.0.1</version>
  <description>Adaptive EKF sensor fusion: GPS + VIO + Depth + IMU</description>
  <maintainer email="swaer032@gmail.com">Gena</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>Eigen3</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
