<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ground_truth_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo plugin publishing exact ground-truth odometry of a model, for LSTM training datasets</description>
  <maintainer email="swaer032@gmail.com">Gena</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
