<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lstm_noise_estimator</name>
  <version>0.0.1</version>
  <description>LSTM-based adaptive noise (variance) estimators for GPS/VIO/Depth sensor fusion</description>
  <maintainer email="swaer032@gmail.com">Gena</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
